# autoagent

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: bingen-release.yml  bingen.yml  ci.yml  release.yml
crates/autoagent-bingen/: Cargo.toml  bind.rs  build.rs  deno.json  package.json  pyproject.toml
crates/autoagent-bingen/__test__/: approval.test.mjs  async.test.mjs  node_bindgen.smoke.mjs  smoke.mjs
crates/autoagent-bingen/deno/: _models.ts  gen.ts  mod.ts  smoke.ts  smoke_bindgen.ts
crates/autoagent-bingen/python/autoagent/: __init__.pyi
crates/autoagent-bingen/schema/: models.schema.json  surface.schema.json
crates/autoagent-bingen/scripts/: smoke-all.sh
crates/autoagent-bingen/src/: lib.rs  main.rs
crates/autoagent-bingen/src/deno/: deno_bindgen.rs  ffi.rs  mod.rs
crates/autoagent-bingen/src/node/: mod.rs  napi.rs  node_bindgen.rs
crates/autoagent-bingen/src/python/: mod.rs  pyrs.rs  python_bingen.rs
crates/autoagent-bingen/tests/: approval.rs  drift.rs  equivalence.rs  evolve_parity_e2e.rs  generate.rs  mutating.rs  parity_e2e.rs  registry.rs  replay.rs  rustpython.rs  wrappers.rs
crates/autoagent-bingen/tests_py/: test_approval.py  test_async.py  test_smoke.py
crates/autoagent-cli/: Cargo.toml
crates/autoagent-cli/src/: approval.rs  main.rs
crates/autoagent-cli/src/commands/: mod.rs
crates/autoagent-cli/tests/: doc_sync.rs  e2e_analyze.rs  e2e_apply_revert.rs  e2e_evolve.rs  e2e_memory.rs  e2e_plan.rs  e2e_replay.rs  e2e_run.rs  e2e_tools.rs
crates/autoagent-core/: Cargo.toml
crates/autoagent-core/src/: lib.rs  schema_version.rs
crates/autoagent-core/src/analysis/: dependency_analyzer.rs  file_scanner.rs  mod.rs  project_analysis.rs  project_analyzer.rs  report_writer.rs  source_map_builder.rs
crates/autoagent-core/src/config/: config_loader.rs  config_schema.rs  default_config.rs  mod.rs
crates/autoagent-core/src/editing/: diff_builder.rs  file_editor.rs  file_operation.rs  mod.rs  patch_writer.rs  snapshot_manager.rs
crates/autoagent-core/src/error/: autoagent_error.rs  mod.rs
crates/autoagent-core/src/git/: branch_manager.rs  git_client.rs  mod.rs
crates/autoagent-core/src/logging/: event_log.rs  mod.rs  run_logger.rs
crates/autoagent-core/src/memory/: memory_store.rs  mod.rs  project_memory.rs  schema.rs  summary.rs
crates/autoagent-core/src/planning/: agent_planner.rs  mod.rs  plan.rs  plan_reader.rs  plan_schema.rs  plan_validator.rs  plan_writer.rs  planner.rs  prompt_builder.rs
crates/autoagent-core/src/planning/llm/: anthropic.rs  config.rs  huggingface.rs  local.rs  mod.rs  openai.rs  openai_compat.rs  provider.rs  redactor.rs
crates/autoagent-core/src/plugins/: host_context.rs  manifest.rs  mod.rs  registry.rs  sample.rs  wasm_host.rs
crates/autoagent-core/src/runtime/: agent_loop.rs  agent_tools.rs  doctor.rs  evolve_guard.rs  evolve_workflow.rs  init.rs  mod.rs  repair.rs  revert.rs  run_state.rs  run_workflow.rs  session.rs  task_context.rs
crates/autoagent-core/src/safety/: approval_gate.rs  command_guard.rs  mod.rs  path_guard.rs  policy_engine.rs
crates/autoagent-core/src/validation/: command_runner.rs  mod.rs  report_md.rs  validation_report.rs
crates/autoagent-core/tests/: audit_completeness.rs  perf_smoke.rs  reversibility_and_policy_matrix.rs  run_folder_contract.rs
crates/autoagent-plugin-sdk/: Cargo.toml
crates/autoagent-plugin-sdk/src/: lib.rs  plugin.rs  schema.rs  tool.rs
docs/: CONFORMANCE.md  schemas.md
docs/plans/: 2026-06-08-M1-mutation-engine.md  2026-06-08-M2-project-analyzer.md  2026-06-08-M3-planner-interface.md  2026-06-08-M4-validation-loop.md  2026-06-08-M5-memory.md  2026-06-08-M6-evolve-mode.md  2026-06-08-M7-plugin-system.md  2026-06-08-M8-stable-release.md  2026-06-09-autoagent-bingen.md  2026-06-10-agentic-loop-and-bounded-autonomy.md  2026-06-10-autoagent-sdks.md
docs/specs/: AutoAgent Technical Specification.md  SPEC-1-autoagent.md  SPEC-2-autoagent-bingen.md
schemas/: plan.schema.json
sdk/deno/: README.md  _models.ts  client.ts  deno.json  errors.ts  mod.test.ts  mod.ts  replay.test.ts
sdk/node/: README.md  package.json
sdk/node/src/: client.ts  errors.ts  index.ts
sdk/node/test/: client.test.mjs  functional.test.mjs  replay.test.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/autoagent/: __init__.py  _models.py  client.py  errors.py
sdk/python/tests/: test_client.py  test_drift.py  test_functional.py  test_models.py  test_replay.py
