[workspace]
resolver = "2"
members = [
    "crates/autoagent-core",
    "crates/autoagent-cli",
    "crates/autoagent-plugin-sdk",
    "crates/autoagent-bingen",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
ignore = "0.4"
globset = "0.4"
similar = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
camino = { version = "1", features = ["serde1"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
wasmtime = "27"
