[package]
name = "autoagent-bingen"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
# Backend adapters compile into a loadable native module; `rlib` lets the
# `bingen` bin and integration tests link the registry + wrappers.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "bingen"
path = "src/main.rs"

[features]
# Exactly one backend per build (mutually exclusive at link time).
default = []
node-napi = ["dep:napi", "dep:napi-derive"]
node-bindgen = ["dep:node-bindgen", "dep:nj-build"]
py-pyo3 = ["dep:pyo3", "dep:pyo3-async-runtimes"]
py-rustpython = ["dep:rustpython-vm"]
# Deno: deno_bindgen is the primary (annotation-based; its CLI generates the TS
# bindings). The raw C-ABI FFI cdylib + generated `deno/mod.ts` is the
# toolchain-free alternative. Both load via Deno.dlopen.
deno-bindgen = ["dep:deno_bindgen"]
deno-ffi = []

[dependencies]
autoagent-core = { path = "../autoagent-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
camino.workspace = true
tokio.workspace = true
toml.workspace = true
chrono.workspace = true
# Versions verified against crates.io 2026-06-09 (latest stable; compatible with
# Rust 1.96 / Node 24 / Python 3.14 / Deno 2.8 installed on this machine).
napi = { version = "3", default-features = false, features = ["napi8", "tokio_rt", "serde-json"], optional = true }
napi-derive = { version = "3", optional = true }
node-bindgen = { version = "6", optional = true }
pyo3 = { version = "0.28", features = ["abi3-py39", "extension-module"], optional = true }
# Async Python bridge: pyo3-asyncio is dead (pins to pyo3 0.20); use the live
# successor, version-locked to pyo3 0.28. Used only for run/evolve in B3-T3.
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"], optional = true }
rustpython-vm = { version = "0.5", optional = true }
deno_bindgen = { version = "0.8", optional = true }

[build-dependencies]
napi-build = "2"
nj-build = { version = "0.3", optional = true }

[dev-dependencies]
tempfile.workspace = true
