[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
# Local dev/test build only (never published — the published wheel is sdk/python).
# Named to match the published distribution `autoagent-sdk`.
name = "autoagent-sdk"
description = "Python bindings for the AutoAgent policy-controlled mutation engine"
requires-python = ">=3.9"
license = { text = "MIT" }
dynamic = ["version"]

[tool.maturin]
# Build the pyo3 cdylib only; the napi/deno/rustpython backends stay off.
features = ["py-pyo3"]
module-name = "_native"
