[package]
name = "autoagent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "autoagent"
path = "src/main.rs"

[dependencies]
autoagent-core = { path = "../autoagent-core" }
anyhow.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
serde_json.workspace = true
toml.workspace = true
camino.workspace = true

[dev-dependencies]
tempfile.workspace = true
