[package]
name = "autoagent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true
ignore.workspace = true
globset.workspace = true
similar.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
camino.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait.workspace = true
autoagent-plugin-sdk = { path = "../autoagent-plugin-sdk" }
wasmtime.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
